--- a/html/emptyarray.html
+++ b/html/emptyarray.html
@@ -9,7 +9,8 @@
 
         let array = ["foot ball", "volley ball", "handball", "basket ball"];
         console.log(array);
-        array.splice(0);
+        let a = array.length;
+        array.splice(0, a);
         console.log(array);
     </script>
 </body>
