--- a/html/intersectionbtwarrays.html
+++ b/html/intersectionbtwarrays.html
@@ -25,7 +25,7 @@
         const arry2 = ["rishi", "loved", "to", "eat"];
 
         const result = Intersection(arry1, arry2);
-        console.log(result);
+        document.write(result);
     </script>
 </body>
 
