--- a/html/splitintochunks.html
+++ b/html/splitintochunks.html
@@ -5,6 +5,7 @@
         // JavaScript Program to Split Array into Smaller Chunks
         function split(arr, chunk) {
 
+            // While loop creates a loop that is executed while a specified condition is true. 
             while (arr.length > 0) {
 
                 let temp;
