--- a/html/intersectionbtwarrays.html
+++ b/html/intersectionbtwarrays.html
@@ -12,8 +12,8 @@
             let answer = [];
 
             for (let i of set2) {
-                if (set1.has(i)) {
-                    answer.push(i);
+                if (set1.has(i)) { // chnaged array to a set so, the function used for array will not be same for array.
+                    answer.push(i); // array use inncludes, set use has.
                 }
             }
 
